# IDGDataHub

./: .env  .gitignore  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
config/: e4_sqlserver.yml  endeavor.yml  qad_redshift.yml
connectors/: redshift.py  snowflake.py  sqlserver.py
ddl/: snowflake_ddl.py
docs_generator/: generate_markdown.py
idgdatahub.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ingestion/: run_ingestion.py  sqlserver_to_snowflake.py
intelligence/: build_relationship_graph.py  create_intelligence_tables.sql  create_relationship_tables.sql  discover_key_candidates.py  discover_relationship_candidates.py  profile_columns.py
loaders/: redshift_loader.py  snowflake_merge.py  sqlserver_loader.py
metadata/: create_catalog_views.sql  create_metadata_objects.sql  create_relationship_discovery_views.sql  ingestion_metadata.py  redshift_metadata.py  sqlserver_metadata.py  watermarks.py
semantic/: build_semantic_model.py  catalog.py  column_selector.py  detect_relationship_cardinality.py  generate_entity_views.py  generate_nm_relationship_views.py  generate_relationship_views.py  generate_semantic_catalog.py  metadata.py  naming.py  qad_redshift_entity_views.sql  qad_redshift_nm_relationship_views.sql  qad_redshift_relationship_views.sql  qad_redshift_semantic_catalog.json  qad_redshift_semantic_model.json  relationship_resolver.py  renderer.py  semantic_rules.py  template_renderer.py
sources/: redshift_source.py  registry.py  sqlserver_source.py
tests/: test_redshift_connection.py  (+2 more)
(+11 files in other folders)
