[project]
name = "idgdatahub"
version = "0.1.0"
description = "Identity Group data ingestion, metadata, validation, and mart framework"
requires-python = ">=3.14"

[tool.black]
line-length = 100
target-version = ["py314"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]