[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "idgdatahub"
version = "0.1.0"
description = "Identity Group Data Platform"
requires-python = ">=3.14"

[tool.setuptools]
packages = [
    "connectors",
    "ingestion",
    "metadata",
    "validation",
    "orchestration",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E","F","I","B","UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]